# hft-4

./: .gitignore  README.md
bridges/ctrader/: CMakeLists.txt  configure  draft_main.cpp  hft2ctrader-config.h.in  main.cpp
bridges/ctrader/bridge/: aux_functions.cpp  ctrader_api.cpp  ctrader_session.cpp  ctrader_ssl_connection.cpp  heartbeat_watchdog.cpp  hft2ctrade_bridge_main.cpp  hft2ctrader_bridge_config.cpp  hft2ctrader_config.cpp  hft_api.cpp  hft_connection.cpp  market_session.cpp  proxy_core.cpp  proxy_session.cpp
bridges/ctrader/bridge/include/: aux_functions.hpp  bridge.hpp  ctrader_api.hpp  ctrader_session.hpp  ctrader_ssl_connection.hpp  heartbeat_watchdog.hpp  hft2ctrader_bridge_config.hpp  hft2ctrader_config.hpp  hft_api.hpp  hft_connection.hpp  market_session.hpp  market_types.hpp  proxy_core.hpp  proxy_session.hpp
bridges/ctrader/historical-data-feed/: historical_data_feed.cpp  historical_data_feed_main.cpp
bridges/ctrader/historical-data-feed/include/: historical_data_feed.hpp
bridges/ctrader/history-ticks/: history_ticks_main.cpp
bridges/ctrader/history-ticks/include/: history_ticks.hpp
bridges/dukascopy/: manual-build.sh  pom.xml.in
etc/: prepare-boost.sh  prepare-protobuf.sh  version.sh
etc/deploy/: hft-config.xml  hft-config.xml.in  hft.service
etc/deploy/session-defaults/AUDUSD/: manifest.json
etc/deploy/session-defaults/AUS.IDXAUD/: manifest.json
etc/deploy/session-defaults/BRENT.CMDUSD/: manifest.json
etc/deploy/session-defaults/COPPER.CMDUSD/: manifest.json
etc/deploy/session-defaults/COTTON.CMDUSX/: manifest.json
etc/deploy/session-defaults/EURUSD/: manifest.json
etc/deploy/session-defaults/EUS.IDXEUR/: manifest.json
etc/deploy/session-defaults/GAS.CMDUSD/: manifest.json
etc/deploy/session-defaults/GBPUSD/: manifest.json
etc/deploy/session-defaults/HKG.IDXHKD/: manifest.json
etc/deploy/session-defaults/LIGHT.CMDUSD/: manifest.json
etc/deploy/session-defaults/NZDUSD/: manifest.json
etc/deploy/session-defaults/USA500.IDXUSD/: manifest.json
etc/deploy/session-defaults/USDCAD/: manifest.json
etc/deploy/session-defaults/USDCHF/: manifest.json
etc/deploy/session-defaults/USDCNH/: manifest.json
etc/deploy/session-defaults/USDDKK/: manifest.json
etc/deploy/session-defaults/USDHKD/: manifest.json
hft/: CMakeLists.txt  configure  draft_main.cpp  hft-config.h.in  main.cpp
hft/dukascopy-emulator/: csv_data_supplier.cpp  csv_loader.cpp  hft_display_filter.cpp  hft_dukascopy_emulator.cpp  hft_dukasemu_main.cpp  hft_instrument_property.cpp  hft_server_connector.cpp
hft/dukascopy-emulator/include/: csv_data_supplier.hpp  csv_loader.hpp  hft_display_filter.hpp  hft_dukascopy_emulator.hpp  hft_instrument_property.hpp  hft_server_connector.hpp
hft/forex-emulator/: csv_data_supplier.cpp  csv_loader.cpp  hft_display_filter.cpp  hft_forex_emulator.cpp  hft_forexemu_main.cpp  hft_instrument_property.cpp  hft_server_connector.cpp
hft/forex-emulator/include/: csv_data_supplier.hpp  csv_loader.hpp  hft_display_filter.hpp  hft_forex_emulator.hpp  hft_instrument_property.hpp  hft_server_connector.hpp
hft/instrument-stats/: hft_instrument_stats.cpp
hft/server/: curlpp.cpp  daemon_process.cpp  deallocator.cpp  hft_handler_resource.cpp  hft_ih_dummy.cpp  hft_request.cpp  hft_response.cpp  hft_server_config.cpp  hft_server_main.cpp  hft_session.cpp  hft_session_state.cpp  instrument_handler.cpp  marketplace_gateway_process.cpp  metrics.cpp  session_transport.cpp  sms_alert.cpp  sms_messenger.cpp  svr.cpp  trade_time_frame.cpp  utilities.cpp
hft/server/include/: basic_tcp_server.hpp  curlpp.hpp  custom_except.hpp  daemon_process.hpp  deallocator.hpp  hft_handler_resource.hpp  hft_ih_dummy.hpp  hft_request.hpp  hft_response.hpp  hft_server_config.hpp  hft_session.hpp  hft_session_state.hpp  instrument_handler.hpp  marketplace_gateway_process.hpp  metrics.hpp  session_transport.hpp  sms_alert.hpp  sms_messenger.hpp  svr.hpp  synchronized_queue.hpp  thread_worker.hpp  trade_time_frame.hpp  utilities.hpp
instrument-handlers/: create-new-plugin.sh
instrument-handlers/blsh/: CMakeLists.txt  blsh.cpp  trade_zone.cpp
instrument-handlers/blsh/include/: blsh.hpp  trade_zone.hpp
instrument-handlers/bottom_scrubbing/: CMakeLists.txt  bottom_scrubbing.cpp
instrument-handlers/bottom_scrubbing/include/: bottom_scrubbing.hpp
instrument-handlers/grid/: CMakeLists.txt  gcell.cpp  grid.cpp
instrument-handlers/grid/include/: gcell.hpp  grid.hpp
instrument-handlers/plugin_template/: CMakeLists.txt  plugin_template.cpp
instrument-handlers/plugin_template/include/: plugin_template.hpp
instrument-handlers/pyramid/: CMakeLists.txt  gcell.cpp  pyramid.cpp
instrument-handlers/pyramid/include/: gcell.hpp  position.hpp  pyramid.hpp
instrument-handlers/simple_tracker/: CMakeLists.txt  simple_tracker.cpp
instrument-handlers/simple_tracker/include/: simple_tracker.hpp
instrument-handlers/smart_martingale/: CMakeLists.txt  smart_martingale.cpp  virtual_player.cpp
instrument-handlers/smart_martingale/include/: smart_martingale.hpp  virtual_player.hpp
instrument-handlers/trend_tracker/: CMakeLists.txt  exchange_rates_collector.cpp  game.cpp  interval_processor.cpp  interval_type.cpp  strategic_engine.cpp  trend_tracker.cpp
instrument-handlers/trend_tracker/include/: advice_types.hpp  exchange_rates_collector.hpp  game.hpp  interval_processor.hpp  interval_type.hpp  invalidable.hpp  strategic_engine.hpp  trend_tracker.hpp
instrument-handlers/xgrid/: CMakeLists.txt  fcd.cpp  gcell.cpp  money_management.cpp  xgcell.cpp  xgrid.cpp
instrument-handlers/xgrid/include/: fcd.hpp  gcell.hpp  invest_guard.hpp  money_management.hpp  positions.hpp  xgcell.hpp  xgrid.hpp
rpm-gen/: rpm-gen.sh
rpm-gen/exchange/: rpm-generator.sh
rpm-gen/exchange/SPECS/: hft-system.spec
rpm-gen/hft-rpmbuild-dockerimage-src/: Dockerfile
utils/extractcsv/: CMakeLists.txt  export_csv.c  export_csv.h  install_manifest.txt  main.c  timestamp.c  timestamp.h  zipped_csv.c  zipped_csv.h
utils/extractcsv/cmake/Modules/: FindLibZip.cmake
(+18 files in other folders)
